[tool.poetry]
name = "sage_identification_pipeline"
version = "0.0.1"
license = "Proprietary"
description = "A place to save app data and share with other apps."
authors = ["Srinivas Neppalli <srinivas.neppalli@h2o.ai>"]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "~3.7.1"
h2o-wave = "^0.12.1"
httpx = "^0.16.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = { version = "^6.2.2", allow-prereleases = true }
pylint = { version = "^2.6.0", allow-prereleases = true }
flake8 = { version = "^3.8.4", allow-prereleases = true }
black = { version = "^20.8b1", allow-prereleases = true }
dephell = { version = "^0.8.3", allow-prereleases = true }
jupyterlab = { version = "^3.0.7", allow-prereleases = true }

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | notebooks
  | local
)
'''

[tool.isort]
line_length = 88
multi_line_output = 3

[tool.dephell.main]
from = { format = "poetry", path = "pyproject.toml" }
to = { format = "setuppy", path = "setup.py" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
